# websocket

./: .gitignore  CMakeLists.txt  License  build.sh  clearBuild.sh  readme.md  task.md
CMake/: cotire.cmake
src/: CMakeLists.txt  WebSocket.cpp  WebSocket.h
src/sha1/: shacmp.cpp
src/test/: CMakeLists.txt  main.cpp  testServer.cpp  unit_test.cpp  unit_test.h
src/ws/: CMakeLists.txt  WebSocket.cpp  WebSocket.h
src/ws/sha1/: sha.cpp  shatest.cpp
